added a app.js to simulated an insertion for the h1

--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="utf-8">
-    <meta name="description" content="Esta es mi pagina web de portafolio. Mi nombre es Jose Arpaia y dejame contarte mi histotia y trayecto como Desarrollador Web.">
+    <meta name="description"
+        content="Esta es mi pagina web de portafolio. Mi nombre es Jose Arpaia y dejame contarte mi histotia y trayecto como Desarrollador Web.">
     <meta name="author" content="Jose Arpaia">
     <meta property="og:image" content="img/fotoDePortadaDiseñoWeb.jpg">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,6 +17,7 @@
     <script src="https://kit.fontawesome.com/f1bcc746fb.js" crossorigin="anonymous"></script>
     <title>Portafolio José Arpaia</title>
 </head>
+
 <body>
     <header>
         <div class="header__bg">
@@ -30,12 +33,12 @@
                 <a href="#" id="nav__btn-menu">Menu</a>
             </nav>
             <div class="titulos-header">
-                <div class="titulos-header--h1">
-                    <h1>Jose Arpaia</h1>          
+                <div>
+                    <h1 class="titulos-header--h1"></h1>
                 </div>
                 <div class="titulos-header--a">
                     <p>
-                        - Front End Developer - 
+                        - Front End Developer -
                     </p>
                 </div>
             </div>
@@ -56,13 +59,23 @@
                     <div class="flex-sobre-mi__info">
                         <p>
                             <b>Universidad</b> <br>
-                            Actualmente estoy estudiando la carrera de Ingenieria de Sistemas y Computación en la Universidad Tecnologica de Panamá, curso los ultimos años de mi carrera, aunque desde siempre me han gustado la computadoras y todo lo que referente a la tecnologia, aprendi HTML a los 17 años y desde ahi supe que tendria que aprender más del desarrollo web.
+                            Actualmente estoy estudiando la carrera de Ingenieria de Sistemas y Computación en la
+                            Universidad Tecnologica de Panamá, curso los ultimos años de mi carrera, aunque desde
+                            siempre me han gustado la computadoras y todo lo que referente a la tecnologia, aprendi HTML
+                            a los 17 años y desde ahi supe que tendria que aprender más del desarrollo web.
                             <br><br>
                             <b>Me encantan los deportes</b> <br>
-                            Desde muy pequeño siempre he sido muy dinamico y activo, sobre todo en el tema de los deportes. El futbol o soccer (como se le conoce en algunos paises) ha estado siempre presente en mi vida y la verdad me encanta, practicarlo. Tambien me gusta mucho el tenis y cada que tengo la oportunidad tambien lo practico pero no esta de más siempre una buena conversación sobre cualquier deporte, realmente las disfruto.
-                            <br><br> 
+                            Desde muy pequeño siempre he sido muy dinamico y activo, sobre todo en el tema de los
+                            deportes. El futbol o soccer (como se le conoce en algunos paises) ha estado siempre
+                            presente en mi vida y la verdad me encanta, practicarlo. Tambien me gusta mucho el tenis y
+                            cada que tengo la oportunidad tambien lo practico pero no esta de más siempre una buena
+                            conversación sobre cualquier deporte, realmente las disfruto.
+                            <br><br>
                             <b>Hobbies (SPOILER: SOY CINEFILO!!)</b> <br>
-                            Ademas de los deportes, me gusta distraerme con el mundo audiovisual, cine, series, cortometrajes y peliculas de acción y sci-fi como Marvel, por ejemplo. Tambien de vez en cuando y de cuando en vez, hago caso a los video recetas y preparo algo rico en casa para toda la familia.
+                            Ademas de los deportes, me gusta distraerme con el mundo audiovisual, cine, series,
+                            cortometrajes y peliculas de acción y sci-fi como Marvel, por ejemplo. Tambien de vez en
+                            cuando y de cuando en vez, hago caso a los video recetas y preparo algo rico en casa para
+                            toda la familia.
                         </p>
                     </div>
                 </div>
@@ -83,11 +96,11 @@
                         <div>
                             <img src="img/KnownTechs/css3-alt-brands.svg" title="CSS" alt="CSS LOGO">
                             <p>Nivel:
-                               <meter min="0" max="100" low="30" high="70" optimum="80" value="60"></meter>
+                                <meter min="0" max="100" low="30" high="70" optimum="80" value="60"></meter>
                             </p>
                         </div>
                         <div>
-                            <img src="img/KnownTechs/js-brands.svg" title="Java alt" title="JavaScript Logo">
+                            <img src="img/KnownTechs/js-brands.svg" title="JavaScript" alt="JavaScript Logo">
                             <p>Nivel:
                                 <meter min="0" max="100" low="30" high="70" optimum="80" value="50"></meter>
                             </p>
@@ -100,7 +113,8 @@
                         </div>
                     </div>
                     <div class="conocimientos__ilustracion">
-                        <img src="img/KnownTechs/IlustracionWebDevelopment.svg" alt="conocimientos" title="Desarrollo Web">
+                        <img src="img/KnownTechs/IlustracionWebDevelopment.svg" alt="conocimientos"
+                            title="Desarrollo Web">
                     </div>
                 </div>
             </div>
@@ -117,7 +131,8 @@
                         <div class="proy-card__content">
                             <h3 class="proy-card__header">Pagina de Tarjetas de Moticacion</h3>
                             <p class="proy-card__text">
-                                Este es un mini proyecto en el cual se hace uso de JavaScript para hacer el display de varias tarjetas con mensajes motivadores.
+                                Este es un mini proyecto en el cual se hace uso de JavaScript para hacer el display de
+                                varias tarjetas con mensajes motivadores.
                             </p>
                         </div>
                     </div>
@@ -129,16 +144,17 @@
                     <h3>PROXIMAMENTE</h3>
                 </div>
             </div>
-            <p class="proyectos-p">Puedes ver más sobre mis proyectos en mi <a href="https://github.com/jqarpaia" target="_BLANK">Github</a></p>
+            <p class="proyectos-p">Puedes ver más sobre mis proyectos en mi <a href="https://github.com/jqarpaia"
+                    target="_BLANK">Github</a></p>
         </section>
     </main>
     <section class="contact" id="contacto">
-         <h2>Contacto</h2>
-         <div class="animatedCubic"></div>
-         <p>
+        <h2>Contacto</h2>
+        <div class="animatedCubic"></div>
+        <p>
             Puedes contactarme a este correo
             <a href="mailto: josarpaiaquintero@gmail.com"><b>josearpaiaquintero@gmail.com</b></a>
-         </p>
+        </p>
     </section>
     <footer>
         <h2 class="footer__h2">Redes Sociales</h2>
@@ -150,8 +166,10 @@
             <a href="https://www.facebook.com/jose.arpaia" target="_BLANK"><i class="fab fa-facebook"></i></a>
             <a href="https://www.instagram.com/josearpaiaq/" target="_BLANK"><i class="fab fa-instagram"></i></a>
         </div>
-        <h2 class="copyright-footer">&copy; 2021 Todos los derechos reservados<br>Hecho por <span>Jose Arpaia</span></h2>
+        <h2 class="copyright-footer">&copy; 2021 Todos los derechos reservados<br>Hecho por <span>Jose Arpaia</span>
+        </h2>
     </footer>
-    <script src="index.js"></script>
+    <script src="app.js"></script>
 </body>
+
 </html>
