added effect from the scrollReveal library

--- a/index.html
+++ b/index.html
@@ -169,6 +169,9 @@
         <h2 class="copyright-footer">&copy; 2021 Todos los derechos reservados<br>Hecho por <span>Jose Arpaia</span>
         </h2>
     </footer>
+     <!-- SCROLL REVEAL -->
+     <script src="https://unpkg.com/scrollreveal"></script>
+     <!-- CODIGO JS -->
     <script src="app.js"></script>
 </body>
 
