written mistakes corrected. changed js logic title load

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <nav>
                 <span>
                     <img src="img/faviconJA- 32x32.png" alt="Logo" title="Jose Arpaia">
-                    <label for="img">Desarrollo Web</label>
+                    <label for="img">Desarrollador Web</label>
                 </span>
                 <a href="#sobre-mi">Sobre mi</a>
                 <a href="#techs">Conocimientos</a>
@@ -129,7 +129,7 @@
                             <img src="img/Projects/motivationalCards.png" alt="" class="proy-card__img">
                         </a>
                         <div class="proy-card__content">
-                            <h3 class="proy-card__header">Pagina de Tarjetas de Moticacion</h3>
+                            <h3 class="proy-card__header">Pagina de Tarjetas de Motivacion</h3>
                             <p class="proy-card__text">
                                 Este es un mini proyecto en el cual se hace uso de JavaScript para hacer el display de
                                 varias tarjetas con mensajes motivadores.
