--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta
       name="description"
-      content="Esta es mi pagina web de portafolio. Mi nombre es Jose Arpaia y dejame contante mi histotia y trayecto como Desarrollor Web."
+      content="Esta es mi pagina web de portafolio. Mi nombre es Jose Arpaia y déjame contante mi historia y trayecto como Desarrollador Web."
     />
     <title>José Arpaia</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
