update to site under maintenance

--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
   </head>
   <body>
     <div class="coming-soon">
-      <p>⚠️ WORK IN PROGRESS HERE!</p>
-      <p>A NEW PAGE WILL COME SOON ‼️</p>
+      <p>⚠️ SITE UNDER MAINTENANCE!</p>
     </div>
   </body>
 </html>
